# ASR-Automatic-Speech-Recognition-

./: .commit_history  .coverage 10  .coverage 2  .coverage 3  .coverage 4  .coverage 5  .coverage 6  .coverage 7  .coverage 8  .coverage 9  .dockerignore  .env.example  .gitignore  .lintstagedrc  .prettierrc  CHANGELOG.md  CITATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.backend.gpu  Dockerfile.frontend  LICENSE  Makefile  PRIVACY.md  README.md  README_EN.md  README_TR.md  ROADMAP.md  SECURITY.md  alembic.ini  benchmark_results.json  commit.sh  docker-compose.gpu.yml  docker-compose.yml  eslint.config.js  fix_app.py  fix_css.py  fix_env.py  fix_ui.py  (+12 more)
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: develop.yml  main.yml
.husky/: pre-commit
.streamlit/: config.toml
ASR/: ASR.py  apple_mode_patch.py  config.py  logic_handlers.py  new_css.css  ui_components.py
alembic/: README  env.py  script.py.mako
alembic/versions/: 1869473b176c_initial_schema.py  a1b2c3d4e5f6_add_raw_text_to_transcript_segments.py  b7c8d9e0f1a2_add_status_to_conversations.py  d28f04568b85_add_user_team_and_audit_log_username.py  f3a8c1d92e4b_add_voiceprint_embedding_model.py
asr_pro/: __init__.py  config.py  worker.py
asr_pro/api/: __init__.py  deps.py  main.py  rbac.py
asr_pro/core/: __init__.py  alert_engine.py  churn_engine.py  compliance_engine.py  empathy_engine.py  keyword_engine.py  semantic_role_guard.py  sentiment_engine.py  summary_engine.py  topic_classifier.py  toxicity_engine.py  trend_engine.py
asr_pro/db/: models.py  seed.py  session.py
asr_pro/integration/: streamlit_ui 2.py  streamlit_ui.py
asr_pro/observability/: metrics.py
asr_pro/services/: asr_service.py  audio_conditioning.py  audio_stream_decoder.py  biometric_service.py  conversation_service.py  crosstalk_resolution_service.py  diarization_eval.py  mos_estimator.py  (+10 more)
benchmarks/: eval_dataset.json
dev-scripts/: ASR_backup.py  asr_funcs.txt  fetch_mermaid.py  fix_inline_styles.py  make_demo.py  patch_dual_engine.py  patch_layout.py  patch_sota.py  refactor_asr.py  replace_script.py  run_benchmarks.py  test_speed.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHURN_RISK_METHODOLOGY.md  CONFIGURATION.md  DEPLOYMENT.md  DIARIZATION_DER_WORKFLOW.md  DIARIZATION_LIMITATIONS.md  ENTERPRISE_ARCHITECTURE_JOURNAL.md  OBSERVABILITY.md  WHISPER_FINETUNING.md  api.md
examples/: sdk_demo.ipynb
helm-chart/: Chart.yaml  values.yaml
scripts/: analyze_sesler_batch.py  annotate_diarization.py  build_synthetic_diarization_benchmark.py  dev.py  evaluate_diarization.py  evaluate_wer.py  finetune_diarization.py  finetune_whisper_lora.py  generate_380_commits.py  measure_real_calls.py  prepare_diarization_finetune_data.py  prepare_whisper_finetune_data.py  run_api.sh  run_benchmarks.py  run_frontend.sh  seed_demo_conversations.py  seed_fake_conversations.py  take_screenshots.py
src/: App.jsx  main.jsx  setupTests.js  styles.css
tests/: conftest.py  test_alert_engine.py  test_annotate_diarization.py  test_api_integration.py  test_api_routes.py  test_asr_8501.py  test_asr_quality_fixes.py  test_asr_service.py  test_asr_service_blackwell.py  test_audio_stream_decoder.py  test_auth.py  test_biometric_service.py  test_churn_engine.py  test_churn_engine_calibration.py  test_compliance_engine.py  test_conversation_fk_integrity.py  test_conversation_service_speaker_reliability.py  test_core_coverage.py  test_coverage_core.py  test_crosstalk_resolution_service.py  test_db_seed.py  test_diarization_eval.py  test_diarization_service.py  test_domain_adaptation_segments.py  test_empathy_engine.py  test_fastapi_coverage.py  test_keyword_engine.py  test_live_coaching_service_extra.py  test_llm_discourse_guard_extra.py  test_metadata_completeness.py  test_metrics.py  test_ml_mocked.py  test_pii_persistence_integration.py  test_pii_redaction.py  test_rbac.py  test_semantic_role_guard.py  test_sentiment_engine.py  test_sota_features.py  test_speech_separation_service.py  test_streaming_session.py  (+12 more)
(+665 files in other folders)
